commented out media query that's not working properly

--- a/styles.css
+++ b/styles.css
@@ -283,7 +283,7 @@ a.portfolio:active {
 
 @media (min-width: 1920px) {
 
-    header section {
+   /* header section {
         max-width: 70%;
     }
 
