--- a/styles.css
+++ b/styles.css
@@ -77,8 +77,7 @@ h1 {
     font-weight: 200;
     text-align: center;
     color: #2A2E45;
-    padding: 5px;
-
+    padding: 10px;
     margin: 0px;
 }
 
@@ -284,4 +283,24 @@ a.portfolio:active {
         width: 90%;
     }
     
+ }
+
+ @media (min-width: 3000px) {
+
+    h1 {
+        font-size: 4em;
+        padding: 30px;
+    }
+    
+    h2 {
+        font-size: 2.5em;
+    }
+
+    p, a, li, label, nav, button {
+        font-size: 1.5em;
+    }
+
+    #profile-img {
+        width: 100%;
+
  }
