--- a/styles.css
+++ b/styles.css
@@ -287,9 +287,14 @@ a.portfolio:active {
 
  @media (min-width: 3000px) {
 
+    header section {
+        justify-content: space-around;
+        padding: 0px 30px 0px 30px;
+    }
+
     h1 {
         font-size: 4em;
-        padding: 30px;
+        padding: 50px;
     }
     
     h2 {
@@ -302,5 +307,10 @@ a.portfolio:active {
 
     #profile-img {
         width: 100%;
+    }
+
+    #aboutme-section, .description-section {
+        width: 30%;
+    }
 
  }
