--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,10 @@ footer p, .footer-text {
     text-align: center;
 }
 
+/*.open, .close {
+    display: none;
+}*/
+
 nav a {
     color: white;
     padding: 0px 10px 0px 10px;
@@ -270,6 +274,7 @@ a.portfolio:active {
 
 @media (max-width: 800px) {
     
+
     /* ---- toggle menu for nav on smaller devices ---- */
     .header-title, .menu {
         display: none;
@@ -285,14 +290,84 @@ a.portfolio:active {
         flex-direction: column;
     }
 
-    .openmenu:checked + .menu {
+    .openmenu {
+        display: block;
+        height: 32px;
+        width: 32px;
+        position: absolute;
+        top: 17px;
+        right: 20px;
+        z-index: 5;
+        cursor: pointer;
+        /* -- hides checkbox -- */
+        opacity: 0;
+    }
+
+    /* -- opens menu -- */
+    .checkbox input[type="checkbox"]:checked ~ .menu {
         display: flex;
         flex-direction: column;
         padding: 20px;
-    }
+        margin: 20px;
+      }
 
- 
+    /* .openmenu:checked + .menu {
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        
+    } */
 
+    .checkbox .hamburger-lines {
+        padding: 0;
+        margin: 10px;
+        display: block;
+        height: 26px;
+        width: 32px;
+        position: absolute;
+        top: 17px;
+        right: 20px;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+
+      .checkbox .hamburger-lines .line {
+        display: block;
+        height: 4px;
+        width: 100%;
+        border-radius: 10px;
+        background: white;
+      }
+
+      /* -- transform hamburger lines -- */
+      .checkbox .hamburger-lines .line1 {
+        transform-origin: 0% 0%;
+        transition: transform 0.4s ease-in-out;
+      }
+      
+      .checkbox .hamburger-lines .line2 {
+        transition: transform 0.2s ease-in-out;
+      }
+      
+      .checkbox .hamburger-lines .line3 {
+        transform-origin: 0% 100%;
+        transition: transform 0.4s ease-in-out;
+      }
+
+      /* -- change hamburger when checked -- */
+      .checkbox input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+        transform: rotate(45deg);
+      }
+      
+      .checkbox input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+        transform: scaleY(0);
+      }
+      
+      .checkbox input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+        transform: rotate(-45deg);
+      }
     /*  ------------- end of toggle menu ------------- */
 
     nav a {
