--- a/styles.css
+++ b/styles.css
@@ -264,6 +264,11 @@ a.portfolio:active {
     border: 1px solid gray;
 }
 
+.assets {
+    width: 100%;
+    border: 1px solid gray;
+}
+
 /* ----------------------------------------- media queries ---------------------------------- */
 @media (max-width: 810px) {
     
