--- a/styles.css
+++ b/styles.css
@@ -234,7 +234,7 @@ a.portfolio:active {
     flex-wrap: wrap;
 }
 
-.assets h2 {
+/* .assets h2 {
     text-align: center;
 }
 
@@ -249,9 +249,9 @@ a.portfolio:active {
     border-radius: 4px;
     padding: 5px;
     margin: 10px;
-    width: 150px;
-    height: 100px;
-    object-fit: cover;
+    width: 100px;
+    height: 50px;
+    object-fit: contain;
     object-position: center;
 }
 
@@ -268,6 +268,15 @@ a.portfolio:active {
     width: 100%;
     border: 1px solid gray;
 }
+
+.asset-images a img {
+    background-color: white;
+}
+
+.asset-images {
+    background-color: #80A1C1;
+    border: 1px solid #965687;
+} */
 
 /* ----------------------------------------- media queries ---------------------------------- */
 @media (max-width: 810px) {
@@ -412,7 +421,7 @@ a.portfolio:active {
         flex-direction: column;
     }
  
-    .mobile-div {
+    .mobile-div, .assets {
         order: 1;
     }
 
