--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=Noto+Sans:ital,wght@0,100;0,400;0,700;1,400&family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Comfortaa:wght@300;400;500;600;700&family=Dosis:wght@200;300;400;500;600;700;800&family=Noto+Sans:ital,wght@0,100;0,400;0,700;1,400&family=Quicksand:wght@300;400;500;600;700&display=swap');
 
- /* * { border: 1px solid lightgray;}  */
+/*  - - - - SITE-WIDE STYLES - - - -  */
+:root {
+ --hairpink: #b9506f;
+ --darkpink: #8D3A51;
+ --darkestpink: #8D3A51;
+ --black-blue: #11151C;
+ --dark-blue: #212D40;
+ --background: #364156;
+ --ghostwhite: #E6E9F0;
+}
 
-html {
-    font-family: 'Dosis', Arial, sans-serif;
+* {
+    font-family: 'Comfortaa','Dosis', Arial, sans-serif;
     font-size: 18px;
+    color: var(--ghostwhite);
+    /* border: 1px solid lightgray; */
 }
 
 body {
+    background-color: var(--background);
     margin: 0;
     padding: 0;
 } 
+/*  - - - - END OF SITE-WIDE STYLES - - - - */
 
+/*  - - - - HEADER AND FOOTER - - - -  */
 footer, header, header section, header section div {
-    background-color: #80A1C1;
-    color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -42,7 +54,9 @@ footer p, .footer-text {
     width: 100%;
     text-align: center;
 }
+/*  - - - -  END OF HEADER AND FOOTER - - - -  */
 
+/*  - - - - NAVIGATION BAR - - - -  */
 nav a {
     color: white;
     padding: 0px 10px 0px 10px;
@@ -144,7 +158,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #fdfcf9;
+    /* background-color: #fdfcf9; */
     height: 100%;
     min-height: 100vh;
     padding: 0;
@@ -208,7 +222,7 @@ button:hover {
 a.portfolio {
     text-decoration: none;
     width: 20%;
-    background-color: white;
+    /* background-color: white; */
     color: #2A2E45;
     padding: 10px;
     border: 1px solid #80A1C1;
