--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Comfortaa:wght@300;400;500;600;700&family=Dosis:wght@200;300;400;500;600;700;800&family=Noto+Sans:ital,wght@0,100;0,400;0,700;1,400&family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
 
 /*  --------------------------------- site-wide styles ------------------------------- */
 
 :root {
  --hairpink: #b9506f;
- --darkpink: #8D3A51;
- --darkestpink: #8D3A51;
  --black-blue: #11151C;
  --dark-blue: #212D40;
  --background: #364156;
@@ -14,7 +12,7 @@
 
 * {
     font-family: 'Comfortaa', 'Dosis', Arial, sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     color: var(--ghostwhite);
     text-decoration: none;
     padding: 0;
@@ -22,7 +20,7 @@
     /* border: 1px solid lightgray; */
 }
 
-img, iframe {
+img {
     border-radius: 5px;
 }
 
@@ -124,14 +122,9 @@ div {
     padding: 20px;
 }
 
-a, p, i {
+a, p{
     padding: 5px;
     margin: 5px;
-}
-
-iframe {
-    width: 560px;
-    height: 315px;
 }
 
 /*  end  */
@@ -141,17 +134,38 @@ section div {
     display: flex;
 }
 
-#projects {
+#projects-section {
     background-color: var(--black-blue);
     padding: 20px;
 }
 
 .card img {
+    object-fit: cover;
+    object-position: center;
     width: 100%;
+    height: 200px;
 }
 
-#projects a:hover {
+#projects-section a {
+    padding: 20px;
+}
+
+#projects-section a:hover {
     background-color: var(--background);
+}
+
+.card-title {
+    font-size: 1.2rem;
+}
+
+i {
+    font-size: .8rem;
+    color: white;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 5px;
+    background-color: var(--hairpink);
+    line-height: 40px;
 }
 
 /*  end  */
@@ -187,4 +201,51 @@ button {
 button:hover {
     background-color: var(--black-blue);
 }
+
 /*  end  */
+/*  --------------------------------- projects ------------------------------- */
+
+#projects {
+    display: flex;
+    flex-direction: row;
+    color: var(--black-blue);
+    background-color: var(--ghostwhite);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-top: 20px;
+    width: 100%;
+}
+
+#projects div {
+    flex-direction: column;
+}
+
+#projects div h2, #projects div p, #projects div ul li {
+    color: var(--black-blue);
+    padding: 10px;
+}
+
+#projects div ul {
+    color: var(--black-blue);
+    padding-left: 50px;
+}
+
+iframe, #projects img {
+    width: 560px;
+    height: 315px;
+    border-radius: 5px;
+}
+
+#projects div a {
+    color: var(--black-blue);
+    background-color: var(--ghostwhite);
+    padding: 0;
+    margin: 0;
+}
+
+#projects div a:hover {
+    color: var(--black-blue);
+    background-color: var(--ghostwhite);
+    border: none;
+    text-decoration: underline;
+}
