--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
     text-decoration: none;
     padding: 0;
     margin: 0;
-    border: 1px solid lightgray;
+    /* border: 1px solid lightgray; */
 }
 
 img {
