shortened width of about me section for 3000+ screens

--- a/styles.css
+++ b/styles.css
@@ -434,6 +434,10 @@ iframe, #projects img {
         padding: 0px 30px 0px 30px;
     }
 
+    #about-me {
+        width: 30%;
+    }
+
     h1 {
         font-size: 4em;
         padding: 50px;
