--- a/styles.css
+++ b/styles.css
@@ -455,12 +455,19 @@ iframe, #projects img {
     }
 
     h1 {
-        font-size: 4em;
+        font-size: 7em;
         padding: 50px;
     }
     
     h2 {
-        font-size: 2.5em;
+        font-size: 4em;
     }
 
+    p, a, i, li {
+        font-size: 2em;
+    }
+
+    .card-title {
+        font-size: 3em;
+    }
  }
