--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ h1 {
 h2 {
     font-size: 2em;
     font-weight: 600;
+    padding: 20px;
 }
 
 div {
@@ -133,27 +134,31 @@ a, p{
 
 section div {
     display: flex;
+    flex-wrap: wrap;
 }
 
 #projects-section {
-    background-color: var(--black-blue);
-    padding: 20px;
+    padding-top: 50px;
 }
 
 .card img {
     object-fit: cover;
     object-position: center;
     width: 100%;
-    height: 200px;
+    height: 300px;
 }
 
 #projects-section a {
     padding: 20px;
-    width: calc(100% - 40px);
+    width: 45%;
+    background-color: var(--black-blue);
+    border: 1px solid var(--black-blue);
+    border-radius: 5px;
 }
 
 #projects-section a:hover {
-    background-color: var(--background);
+    border: 1px solid var(--black-blue);
+    background-color: var(--dark-blue);
 }
 
 .card-title {
@@ -341,7 +346,7 @@ iframe, #projects img {
     /*  ------------- end of toggle menu ------------- */
 
     h1 {
-        font-size: 3em;
+        font-size: 3.5em;
     }
 
     h2 {
@@ -349,11 +354,11 @@ iframe, #projects img {
     }
 
     p, a, i, li {
-        font-size: 1.2em;
+        font-size: 1em;
     }
 
     .card-title {
-        font-size: 1.6em;
+        font-size: 1.3em;
     }
 
     nav a {
@@ -380,16 +385,19 @@ iframe, #projects img {
         flex-direction: column;
     }
 
+    #projects-section a {
+        width: calc(100% - 50px);
+    }
+
     #projects {
         flex-direction: column-reverse;
     }
 
     #profile-img {
-        width: 25%;
-        height: 25%;
-        border-radius: 50%;
-        object-fit: cover;
-        object-position: center;
+        width: 30%;
+        height: 30%;
+        padding: 1em;
+        border-radius: 10%;
     }
 
     img {
@@ -399,8 +407,13 @@ iframe, #projects img {
         object-position: center;
     }
 
-    button, iframe, #projects img {
+    button {
         width: 100%;
+    }
+
+    iframe, #projects img {
+        align-self: center;
+        width: 85%;
     }
 
     form {
@@ -410,7 +423,7 @@ iframe, #projects img {
 }
 
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
 
     #about-me {
         padding: 0;
