--- a/jess-hek.css
+++ b/jess-hek.css
@@ -14,9 +14,18 @@
 * {
     font-family: 'Comfortaa', 'Dosis', Arial, sans-serif;
     font-size: 16px;
-    color: var(--ghostwhite);
+    color: var(--black-blue);
     text-decoration: none;
     padding: 0;
     margin: 0;
     /* border: 1px solid lightgray; */
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+img {
+    width: 100px;
+    border-radius: 50px;
 }
