text color change

--- a/jess-hek.css
+++ b/jess-hek.css
@@ -9,8 +9,8 @@
  --dark-blue: #212D40;
 
  --svgs: #f25d98;
- --texta: #b49573;
- --text: #c2aa90;
+ --text: #b49573;
+ --texta: #c2aa90;
  --background: #F2EEED;
  --border: #eae2e0;
 }
