--- a/jess-hek.css
+++ b/jess-hek.css
@@ -11,6 +11,7 @@
  --pink: #f25d98;
  --soft-pink: #f2a9bc;
 
+ --svgs2: #dac5ae;
  --svgs: #a7beed;
  --text: #b49573;
  --texta: #c2aa90;
@@ -69,8 +70,7 @@ main {
 
 h1 {
     font-family: "Pacifico";
-    text-shadow: -1px -1px 0 var(--text);
-    stroke: var(--svgs);
+    text-shadow: -1px -1px 0 var(--text), -1px -1px 0 var(--text), -1px -1px 0 var(--text), 1px 1px 0 var(--border);
     color: white; 
     text-align: center;
     font-size: 3.5rem;
@@ -101,6 +101,7 @@ a {
     background-color: white;
     border: 1px solid var(--border);
     border-radius: 5px;
+    /* color: var(--svgs) */
 }
 
 a:active {
