--- a/jess-hek.css
+++ b/jess-hek.css
@@ -77,9 +77,12 @@ h1 {
     margin: 20px 0 5px 0;
 }
 
+.tag {
+    font-size: 1.2rem;
+}
+
 p {
     text-align: center;
-    font-size: 1.2rem;
     margin: 5px 0 20px 0;
 }
 
@@ -107,6 +110,19 @@ a {
 
 a:active {
     text-decoration: underline;
+}
+
+.qr-code {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+
+img {
+    border: 1px solid var(--text);
+    border-radius: 5px;
+    width: 50%;
 }
 
 footer {
