--- a/jess-hek.css
+++ b/jess-hek.css
@@ -128,3 +128,19 @@ img {
 footer {
     height: 50px;
 }
+
+@media (min-width: 700px) {
+
+    .hero-image {
+        width: 65%;
+        min-height: 450px;
+    }
+    .card {
+        width: 50%
+    }
+
+    img {
+        width: 25%;
+    }
+
+}
