--- a/showcase/showcase.css
+++ b/showcase/showcase.css
@@ -34,14 +34,26 @@ h1 {
     font-size: 2rem;
 }
 
-h1, h2, p, a, i {
-    margin: 5px;
+h1, h2, p, a {
+  padding: 5px;  
+  margin: 5px;
+}
+
+a {
+  text-decoration: underline;
+/*   color: var(--hairpink); */
+}
+
+a:hover {
+  cursor: pointer;
+  color: var(--pink);
 }
 
 i {
     background-color: var(--pink);
-    padding: 5px;
-    border-radius: 10px;
+    padding: 8px;
+    margin: 5px;
+    border-radius: 25px;
     color: white;
     font-weight: 700;
 }
@@ -57,11 +69,13 @@ img {
 /* ------------------- bio section ------------------ */
 
 .bio-section {
-    /* background-color: antiquewhite; */
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 30%;
+    height: 100%;
+    position: fixed;
 }
 
 .bio-section div {
@@ -70,27 +84,36 @@ img {
     /* border: 1px solid grey; */
 }
 
+.tag {
+  color: var(--pink);
+  font-size: 1.1rem;
+  font-weight: 700;
+}
+
 /* ------------------ showcase section ----------------- */
 
 .showcase-section {
+/*     float: right; */
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: column; 
+    align-items: end;
+/*     justify-items: end; */
     background-color: var(--svgs);
-    width: 70%;
+    width: 100%;
     /* border: 1px solid grey; */
 }
 
-.showcase-section a {
+.project-img {
     width: 300px;
     height: 200px;
-    border: 1px solid var(--svgs);
+    border: 2px solid var(--svgs);
     border-radius: 10px;
     overflow: hidden;
 }
 
-.showcase-section a:hover + .hide {
-    position: absolute;
+.project-img:hover{
+  cursor: pointer;  
+/*   position: absolute; */
     bottom: 50%;
 }
 
@@ -116,22 +139,26 @@ img {
 .project-card {
     background-color: white;
     padding: 20px;
-    margin: 10px;
+    margin: 10px 50px;
     border-radius: 10px;
     display: flex;
     flex-direction: row;
+/*     justify-content: end; */
     /* flex-wrap: wrap; */
-    width: 90%;
+    width: 60%;
     /* border: 1px solid red; */
 }
 
 .project-details {
-    width: 600px;
+    width: 70%;
 }
 
 .stack {
     display: flex;
-    flex-direction: column;
+    padding-top: 5px;
+    margin-top: 5px;
+/*     border: 1px solid black; */
+/*     flex-direction: column; */
     /* position: absolute right; */
     /* width: 100%; */
 }
