--- a/showcase/showcase.css
+++ b/showcase/showcase.css
@@ -21,7 +21,7 @@
     font-family: 'Comfortaa', 'Dosis', Arial, sans-serif;
     padding: 0;
     margin: 0;
-    font-size: 18px;
+    font-size: 16px;
     /* border: 1px solid grey; */
 }
 
@@ -56,6 +56,7 @@ i {
     border-radius: 25px;
     color: white;
     font-weight: 700;
+    font-size; .8rem;
 }
 
 main {
