--- a/showcase/showcase.css
+++ b/showcase/showcase.css
@@ -56,7 +56,7 @@ i {
     border-radius: 25px;
     color: white;
     font-weight: 700;
-    font-size; .8rem;
+    font-size; 0.6rem;
 }
 
 main {
