--- a/showcase/showcase.css
+++ b/showcase/showcase.css
@@ -52,10 +52,10 @@ a:hover {
 #btn {
     font-size: 1.2rem;
     font-weight: 700;
-    color: white;
+    color: black;
     text-decoration: none;
-    /* background-color: var(--svgs); */
-    background-color: var(--pink);
+    background-color: var(--svgs);
+    /* background-color: var(--pink); */
     border-radius: 10px;
     padding: 10px;
     margin: 5px;
@@ -63,9 +63,9 @@ a:hover {
 }
 
 #btn:hover {
-    /* background-color: var(--pink); */
-    background-color: var(--svgs);
-    color: black;
+    background-color: var(--pink);
+    /* background-color: var(--svgs); */
+    color: white;
     /* box-shadow: 3px 3px 2px var(--border); */
 }
 
@@ -166,6 +166,15 @@ li {
     text-align: center;
 }
 
+#bio-pic {
+    background-color: var(--svgs);
+    width: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 100%;
+    /* border: 1px solid var(--pink); */
+}
+
 /* #qr-code {
    display: flex;
    flex-direction: column;
@@ -185,6 +194,7 @@ li {
     display: flex;
     flex-direction: column; 
     align-items: end;
+    padding-top: 10px;
 /*     justify-items: end; */
     background-color: var(--svgs);
     width: 70%;
@@ -199,7 +209,7 @@ li {
 .project-img {
     width: 300px;
     height: 200px;
-    border: 2px solid var(--svgs);
+    /* border: 2px solid var(--svgs); */
     border-radius: 10px;
     overflow: hidden;
 }
@@ -231,7 +241,7 @@ li {
 
 .project-card {
     background-color: white;
-    padding: 20px;
+    padding: 10px;
     margin: 20px 50px 10px;
     border-radius: 10px;
     display: flex;
