--- a/showcase/showcase.css
+++ b/showcase/showcase.css
@@ -36,7 +36,7 @@ h2 {
 
 h1 {
     font-family: "Pacifico";
-    font-size: 2.5rem;
+    font-size: 2.8rem;
 }
 
 a {
@@ -70,7 +70,7 @@ a:hover {
 }
 
 #web-btn {
-    /* font-size: 1.2rem; */
+    font-size: .8rem;
     /* font-weight: 700; */
     color: black;
     text-decoration: none;
@@ -136,7 +136,13 @@ li {
     position: fixed;
 }
 
-.bio-section h1, .bio-section h2, .bio-section p {
+.bio-section h1 {
+    padding: 5px 0 5px 0;
+    margin: 0 5px 0 5px;
+    width: 100%;
+}
+
+.bio-section h2, .bio-section p {
     /* padding: 5px 15px;   */
     padding: 5px 0 5px 0;
     margin: 5px;
@@ -148,7 +154,7 @@ li {
     flex-direction: column;
     align-items: center;
     padding: 10px;
-    margin: 10px;
+    margin: 20px;
     /* border: 1px solid grey; */
 }
 
@@ -195,6 +201,7 @@ li {
     flex-direction: column; 
     align-items: end;
     padding-top: 10px;
+    padding-bottom: 20px;
 /*     justify-items: end; */
     background-color: var(--svgs);
     width: 70%;
