--- a/showcase/showcase.css
+++ b/showcase/showcase.css
@@ -10,6 +10,7 @@
     --soft-pink: #f2a9bc;
    
     --svgs2: #dac5ae;
+    --svgs-border: #92ade4;
     --svgs: #a7beed;
     --text: #b49573;
     --texta: #c2aa90;
@@ -22,7 +23,6 @@
     padding: 0;
     margin: 0;
     font-size: 16px;
-    /* border: 1px solid grey; */
 }
 
 body, main {
@@ -55,7 +55,6 @@ a:hover {
     color: black;
     text-decoration: none;
     background-color: var(--svgs);
-    /* background-color: var(--pink); */
     border-radius: 10px;
     padding: 10px;
     margin: 5px;
@@ -64,14 +63,11 @@ a:hover {
 
 #btn:hover {
     background-color: var(--pink);
-    /* background-color: var(--svgs); */
     color: white;
-    /* box-shadow: 3px 3px 2px var(--border); */
 }
 
 #web-btn {
     font-size: .8rem;
-    /* font-weight: 700; */
     color: black;
     text-decoration: none;
     background-color: var(--svgs);
@@ -84,7 +80,6 @@ a:hover {
 #web-btn:hover {
     background-color: var(--pink);
     color: white;
-    /* box-shadow: 3px 3px 2px var(--border); */
 }
 
 i {
@@ -113,7 +108,6 @@ iframe {
 }
 
 ul {
-    /* padding-left: 30px; */
     padding: 5px 5px 5px 30px;  
     margin: 5px;
 }
@@ -130,8 +124,6 @@ li {
     flex-direction: column;
     align-items: center;
     width: 30%;
-    /* margin: 20px; */
-    /* border-radius: 10px; */
     height: 100%;
     position: fixed;
 }
@@ -143,7 +135,6 @@ li {
 }
 
 .bio-section h2, .bio-section p {
-    /* padding: 5px 15px;   */
     padding: 5px 0 5px 0;
     margin: 5px;
     width: 100%;
@@ -155,21 +146,13 @@ li {
     align-items: center;
     padding: 10px;
     margin: 20px;
-    /* border: 1px solid grey; */
 }
 
 .tag {
     text-align: left;
     color: var(--pink);
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: 700;
-}
-
-.play {
-    font-size: 1.5rem;
-    font-weight: 700;
-    padding: 15px 0;
-    text-align: center;
 }
 
 #bio-pic {
@@ -178,14 +161,14 @@ li {
     object-fit: cover;
     object-position: center;
     border-radius: 100%;
-    /* border: 1px solid var(--pink); */
 }
 
-/* #qr-code {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-} */
+.play {
+    font-size: 1.2rem;
+    font-weight: 700;
+    text-align: center;
+}
+
 
 /* ------------------ filler section ------------------- */
 
@@ -193,57 +176,69 @@ li {
     width: 30%;
 }
 
+/* ------------------ hover to reveal -------------------- */
+
+.project-link {
+    position: relative;
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
+}
+
+.project-link:hover{
+    cursor: pointer;  
+}
+
+.project-img {
+    display: block;
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 10px;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #a7beede0;
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .5s ease-in;
+    opacity: 0;
+}
+
+.overlay:hover {
+    opacity: 1;
+}
+
+.overlay-text {
+    font-size: 2.5rem;
+    font-weight: 800;
+    color: white;
+    text-align: center;
+}
+
 /* ------------------ showcase section ----------------- */
 
 .showcase-section {
-/*     float: right; */
     display: flex;
     flex-direction: column; 
     align-items: end;
     padding-top: 10px;
     padding-bottom: 20px;
-/*     justify-items: end; */
     background-color: var(--svgs);
     width: 70%;
-    /* border: 1px solid grey; */
 }
 
 .showcase-section h1, .showcase-section h2, .showcase-section p {
     padding: 5px 15px;  
     margin: 5px;
-}
-
-.project-img {
-    width: 300px;
-    height: 200px;
-    /* border: 2px solid var(--svgs); */
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.project-img:hover{
-    cursor: pointer;  
-/*   position: absolute; */
-    bottom: 50%;
-}
-
-.hide {
-    width: 300px;
-    height: 200px;
-    /* text-align: center; */
-    /* position: absolute; */
-    /* right: 50%; */
-    /* visibility: hidden; */
-}
-
-.showcase-section img {
-    /* width: 100%; */
-    width: 300px;
-    height: 200px;
-    object-fit: cover;
-    object-position: center;
-    /* border: 1px solid var(--svgs);
-    border-radius: 10px; */
 }
 
 .project-card {
@@ -253,10 +248,6 @@ li {
     border-radius: 10px;
     display: flex;
     flex-direction: row;
-/*     justify-content: end; */
-    /* flex-wrap: wrap; */
-    /* width: 60%; */
-    /* border: 1px solid red; */
 }
 
 .project-details {
@@ -267,8 +258,4 @@ li {
     display: flex;
     padding: 5px 15px;
     margin-top: 5px;
-/*     border: 1px solid black; */
-/*     flex-direction: column; */
-    /* position: absolute right; */
-    /* width: 100%; */
 }
