--- a/showcase/showcase.css
+++ b/showcase/showcase.css
@@ -57,7 +57,6 @@ a:hover {
     background-color: var(--svgs);
     border-radius: 10px;
     padding: 10px;
-    margin: 5px;
     box-shadow: 2px 2px 2px var(--border);
 }
 
@@ -140,12 +139,18 @@ li {
     width: 100%;
 }
 
+.web-link {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .bio-section div {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px;
-    margin: 20px;
+    margin: 20px 20px 10px 20px;
 }
 
 .tag {
